--- a/src/views/recoleccion.hbs
+++ b/src/views/recoleccion.hbs
@@ -1229,7 +1229,7 @@
                     </div>
 
                     <div class="col-md-4">
-                      <img style="height: 300px" src="img/revalidacion.png">
+                      <img loading="lazy" style="height: 300px" src="img/revalidacion.png">
                     </div>
 
                   </div>
