--- a/src/views/titulacion.hbs
+++ b/src/views/titulacion.hbs
@@ -46,14 +46,14 @@
             <div class="row row row-cols-1 row-cols-xl-2 row-cols-md-2 g-2 my-1">
 
               <div class="col" style="text-align:center;" >
-              <video width="100%" height="" controls>
+              <video loading="lazy" width="100%" height="" controls>
                 <source src="videos/Requisitos de titulación.mp4" type="video/mp4">
                 <p></p>
             </video>
             </div>
 
               <div class="col" style="text-align:center;" >
-                <video width="100%" height="" controls>
+                <video loading="lazy" width="100%" height="" controls>
                   <source src="videos/Proceso de certificación y titulación.mp4" type="video/mp4">
                   <p></p>
               </video>
@@ -87,14 +87,14 @@
           <div class="row row row-cols-1 row-cols-xl-2 row-cols-md-2 g-2 my-1">
 
             <div class="col" style="text-align:center;" >
-              <video width="100%" height="" controls>
+              <video loading="lazy" width="100%" height="" controls>
                 <source src="videos/Requisitos de titulación.mp4" type="video/mp4">
                 <p></p>
               </video>
             </div>
 
             <div class="col" style="text-align:center;" >
-              <video width="100%" height="" controls>
+              <video loading="lazy" width="100%" height="" controls>
                 <source src="videos/Proceso de certificación y titulación.mp4" type="video/mp4">
                 <p></p>
              </video>
