--- a/src/views/directorio.hbs
+++ b/src/views/directorio.hbs
@@ -3074,7 +3074,7 @@
     </div>
 
     <div class="col col-mb-6">
-      <img class="rounded-3 d-block w-100" src="img/escolares/utelplantel.png" alt="">
+      <img class="rounded-3 d-block w-100" src="img/escolares/utelplantel.jpg" alt="">
     </div>
   </div>
 </div>
