--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -41,7 +41,7 @@
         </div>
         <div class="col">
           <div class="card border-0">
-            <img loading="lazy" rc="img/Noticias/pagonoticia.png" class="card-img-top" alt="...">
+            <img loading="lazy" src="img/Noticias/pagonoticia.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Colegiatura final outselling</h5>
               <p class="card-text" style="text-align: justify; ">Consiste en descuentos o pagos a plazos. Está disponible para los alumnos que tengan desde el 10% al 79% de avance curricular.</p>
