--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -14,7 +14,7 @@
         <a class="nav-link" href="latam">Equivalencia académica</a>
         <a class="nav-link" href="serviciosocial">Servicio social</a>
         <a class="nav-link" href="servicioses">Servicios escolares</a>
-        <a class="nav-link" href="recoleccion">Recolección de documentos</a>
+        <a class="nav-link" href="recoleccion">Control documental</a>
         <a class="nav-link" href="directorio">Directorio</a>
         <a class="nav-link" href="preguntas">Dudas</a>
       
