--- a/src/views/mapa.hbs
+++ b/src/views/mapa.hbs
@@ -10,7 +10,7 @@
           <a class="Botonmenu row py-3 px-3 my-0 bton justify-content-center" onmouseover="mostrarDocumento(5)">Equivalencia academica</a>
           <a class="Botonmenu row py-3 px-3 my-0 bton justify-content-center" onmouseover="mostrarDocumento(2)">Servicio social</a>
           <a class="Botonmenu row py-3 px-3 my-0 bton justify-content-center" onmouseover="mostrarDocumento(3)">Servicios escolares</a>
-          <a class="Botonmenu row py-3 px-3 my-0 bton justify-content-center" onmouseover="mostrarDocumento(4)">Recolección de documentos</a>
+          <a class="Botonmenu row py-3 px-3 my-0 bton justify-content-center" onmouseover="mostrarDocumento(4)">Control documental</a>
           <a class="Botonmenu row py-3 px-3 my-0 bton justify-content-center" onmouseover="mostrarDocumento(6)">Directorio</a>
           <a class="Botonmenu row py-3 px-3 my-0 bton justify-content-center" onmouseover="mostrarDocumento(7)">Manuales</a>
           <a class="Botonmenu row py-3 px-3 my-0 bton justify-content-center" onmouseover="mostrarDocumento(8)">Dudas</a>
