--- a/src/views/recoleccion.hbs
+++ b/src/views/recoleccion.hbs
@@ -1,6 +1,6 @@
 <div class="container rounded-3 py-3 bg-white">
 
-    <h1 class="text-center" id="certificacion">Recolección de documentos</h1>
+    <h1 class="text-center" id="certificacion">Control documental</h1>
     <div class="contenedor ">
       <ul class="ul container">
         <div class="row text-center">
@@ -27,8 +27,22 @@
         <!--Documentación UTEL-->
         <div class="bloque activo" id="bloqueDocUtel">
           <div class="card border-0 py-3 px-3" style="text-align: justify;">
-            <h4><b>Requisitos de los documentos.</b></h4></br>
+
+            <h4><b>Recolección de documentos</b></h4></br>
+            <p>
+            Equipo encargado de recolectar y validar documentos digitales y físicos de todo estudiante que no ha completado su expediente escolar.
+            Proceso general: el asesor contacta al alumno para obtener el documento faltante, lo carga y válida en el sistema SIU para completar el expediente escolar. 
+            </p>
+            
+            </br>
+            <h5><b>Características y condiciones de documentos:</b></h5></br>
             <a>
+
+             ● El alumno debe entregar documentos digitales, excepto para ingresos por equivalencia o revalidación, que necesitan documentos físicos originales.
+              </br>
+             ● Solo se aceptarán escaneos en formato PDF del documento original, que estén legibles, en buen estado, y muestren ambos lados (aún cuando esté en blanco en el reverso) con los 4 bordes completos. No se admitirán fotografías en formato PDF ni capturas de aplicaciones de celular o fotos de fotos.
+              </br></br>
+
               Con la documentación física se realiza la inscripción oficial ante el sistema educativo (SEP) y desde ese momento registrar sus calificaciones cada periodo. 
               Al ser egresado y liberar su servicio social, tiene derecho a la emisión del Certificado de estudios y Título profesional/Grado académico.
               De tal manera que al aprobar las materias y servicio social el alumno tiene derecho a Título y
@@ -78,7 +92,7 @@
                           ● Certificado parcial Licenciatura (en caso de equivalencia)</br>
                           ● Acta de nacimiento</br>
                           ● Carta compromiso</br>
-                          ● Certificado total bachillerato</br>
+                          ● Certificado total bachillerato (En todos los certificados dice  “certificado o certifica”)</br>
                           ● Identificación oficial</br>
                           ● Comprobante de domicilio</br>
                           ● Términos y condiciones</br>
@@ -92,11 +106,11 @@
                           ● Carta compromiso</br>
                           ● Pago</br>
                           ● Términos y condiciones</br>
-                          ● Título digital</br>
+                          ● Título digital (Se aceptan copias 100% legibles)</br>
                           ● Curriculum vitae</br>
                           ● Carta motivos</br>
                           ● Solicitud de admisión</br>
-                          ● Certificado total Licenciatura</br>
+                          ● Certificado total Licenciatura (En todos los certificados dice  “certificado o certifica”)</br>
                           ● Acta de nacimiento </br></br>
 
                           <strong>Documentación para Doctorado:</strong> </br></br>
@@ -107,11 +121,11 @@
                           ● Pago</br>
                           ● Términos y condiciones</br>
                           ● Constancia de Ingles</br>
-                          ● Título digital</br>
+                          ● Título digital(Se aceptan copias 100% legibles)</br>
                           ● Curriculum vitae</br>
                           ● Carta motivos</br>
                           ● Solicitud de admisión</br>
-                          ● Certificado total maestría</br>
+                          ● Certificado total maestría(En todos los certificados dice  “certificado o certifica”)</br>
                           ● Acta de nacimiento </br></br>
                         </div>
 
@@ -1011,6 +1025,24 @@
                     </div>
                   </div>
                 </div>
+
+                <!--Documentos Alianzas-->
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="panelsStayOpen-headingAlianzas">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                      data-bs-target="#panelsStayOpen-collapseAlianzas" aria-expanded="false"
+                      aria-controls="panelsStayOpen-collapseAlianzas">
+                      Documentación para alumnos Alianzas
+                    </button>
+                  </h2>
+
+                  <div id="panelsStayOpen-collapseAlianzas" class="accordion-collapse collapse"
+                    aria-labelledby="panelsStayOpen-headingAlianzas">
+                    <div class="accordion-body">
+
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -1076,14 +1108,10 @@
           <div class="border border-0 card mt-1">
 
             <div class="card border-0 py-3 px-3" >
-              <h4><b>¿Qué son los tipos de ingreso?</b></h4></br>
+              <h4><b>¿Que es el tipo de Ingreso?</b></h4></br>
 
               <a>
-                Para ingresar a cursar un grado académico dentro de Utel es necesario determinar el tipo de ingreso al
-                plan académico para
-                identificar las intenciones del alumno, existen 3 tipos de ingreso para determinar la situación del
-                alumno.
-
+                Se asigna según la situación escolar y antecedentes académicos de cada alumno, incluyen: regular, equivalencia de materias, revalidación de estudios o dictamen técnico.
               </a>
             </div>
 
@@ -1096,14 +1124,9 @@
 
                     <div class="col-md-8">
                       <div class="card-body">
-                        <h5 class="card-title text-center">Equivalencia</h5>
+                        <h5 class="card-title text-center">Equivalencia de materias:</h5>
                         <p class="card-text" style="text-align: justify;">
-                          Es un documento expedido de una modalidad educativa a otra, en el que se declaran equiparables entre sí los estudios realizados dentro del Sistema 
-                          Educativo Nacional (SEN), es decir, si un alumno ha acreditado estudios dentro del SEN y por algún motivo desea continuar con el mismo plan o programa 
-                          en otra institución educativa oficial o particular perteneciente a dicho sistema educativo, deberá tramitar la equivalencia de estudios correspondiente. 
-                          <br/>
-                          Se trata de un proceso 100% administrativo que puede realizar la propia institución, también puede ser realizado por el alumno, acudiendo personalmente 
-                          ante la Dirección General de Educación Superior Universitaria de la Secretaría de Educación Pública (SEP).
+                          Trámite mediante el cual la Autoridad Educativa o la Institución declara equiparables entre sí estudios realizados dentro del Sistema Educativo Nacional.
                         </p>
 
                       </div>
@@ -1163,21 +1186,10 @@
 
                     <div class="col-md-8">
                       <div class="card-body">
-                        <h5 class="card-title text-center">Revalidación</h5>
+                        <h5 class="card-title text-center">Revalidación de estudios:</h5>
                         <p class="card-text" style="text-align: justify;">
 
-                          Trámite ante SEP para equiparar estudios realizados fuera del sistema educativo nacional (en
-                          el extranjero)</br></br>
-
-                          Esta forma aplica para estudiantes con estudios en el extranjero que desean ejercer
-                          profesionalmente en México.</br></br>
-
-                          En este supuesto el alumno debe llevar a cabo el proceso de revalidación correspondiente y
-                          cumplir con las
-                          normas establecidas. (Los alumnos que ingresen por esta opción, su egreso será el mismo que un
-                          alumno regular,
-                          cumpliendo con su servicio social para poder realizar su registro para emisión de cédula
-                          profesional)
+                        Trámite mediante el cual la autoridad educativa otorga validez oficial a estudios realizados en el extranjero, siempre y cuando sean equiparables con estudios que se impartan en el Sistema Educativo Nacional.
 
                         </p>
 
@@ -1248,12 +1260,7 @@
                         <h5 class="card-title text-center">Dictamen técnico</h5>
                         <p class="card-text" style="text-align: justify;">
 
-                          Este proceso aplica para los estudiantes que ingresan a Utel con fines académicos sin la
-                          intención de ejercer profesionalmente en México.</br></br>
-
-                          Se creará una etiqueta de ingreso denominada Dictamen Técnico para identificar a los
-                          estudiantes
-                          desde su inscripción y hacer el acompañamiento correspondiente
+                          Finalidad de reconocer estudios de Educación Media Superior y Superior realizados en el extranjero, únicamente con fines académicos para facilitar el ingreso de alumnos a escuelas mexicanas que imparten planes de estudios con reconocimiento de validez oficial.
 
                         </p>
                         <div class="px-2 py-2">
@@ -1451,7 +1458,7 @@
 
                          <h4 class="text-center" >Constancia de autenticidad</h4>
                         
-                        <img class="mx-auto d-block img-fluid" src="img/Recoleccion/acuse-autenticacion.PNG">
+                        <img class="mx-auto d-block img-fluid" src="img/Recoleccion/acuse-autenticacion.PN">
                         
                       </div>
 
