--- a/src/views/recoleccion.hbs
+++ b/src/views/recoleccion.hbs
@@ -167,11 +167,18 @@
                     <div class="accordion-body">
                       <strong>Documentación para alumnos de LATAM</strong></br></br>
 
+                      Documentos Digitales para Dictamen Técnico (los documentos deben estar notariados)
+                      <br/>
+                      ● Acta de nacimiento / Partida de nacimiento
+                      <br/>
+                      ● Certificado / diploma / título de bachiller o documento equivalente / 
+                      </br></br>
+
                       Los documentos que deben entregar son:</br></br>
-                      1. Carta Compromiso original con firma autógrafa con hoja anexa</br></br>
+                      1. Carta Compromiso original con firma autógrafa con hoja anexa</br>
                       2. Copia Notariada del DNI (Identificación oficial) o también le llaman cédula de identidad,
-                      debe estar vigente o el acta, partida o certificado de Nacimiento</br></br>
-                      3. Copia Notariada del Diploma o Título de Bachiller o de Licenciatura según sea el caso</br></br>
+                      debe estar vigente o el acta, partida o certificado de Nacimiento</br>
+                      3. Copia Notariada del Diploma o Título de Bachiller o de Licenciatura según sea el caso</br>
                       4. En los casos de Maestría carta de Exposición de motivos
 
                       </br></br>  
@@ -1117,6 +1124,65 @@
 
             <div class="row row-cols-1 row-cols-xl-1 row-cols-md-1 g-4 my-1">
 
+
+              <!--Regular-->
+              <div class="col">
+                <div class="card border-0 mb-3">
+                  <div class="row g-0">
+
+                    <div class="col-md-8">
+                      <div class="card-body">
+                        <h5 class="card-title text-center">Regular</h5>
+                        <p class="card-text" style="text-align: justify;">
+                          Proceso estándar mediante el cual los alumnos solicitan y son admitidos en
+                          programas académicos regulares que no piensan hacer equivalencia de materias o revalidación.
+                          Esto implica seguir los procedimientos y requisitos establecidos por la universidad.
+                        </p>
+
+                      </div>
+
+                      <div class="px-2 py-2">
+                        <div class="accordion" id="accordionPanelsStayOpenExample">
+                          <div class="accordion-item">
+                            <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+                              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
+                                aria-controls="panelsStayOpen-collapseOne">
+                                Documentación regular
+                              </button>
+                            </h2>
+                            <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingOne">
+                              <div class="accordion-body">
+                                <div class="container rounded-3 my-3 py-3 bg-white">
+                                  <h5 class="text-center">Documentación regular</h5>
+
+
+                                  • Certificado de Bachillerato (Legalizado) por ambos lados
+                                  </br>
+                                  • Identificación Oficial (IFE por ambos lados o Pasaporte)
+                                  </br>
+                                  • CURP
+                                  </br>
+                                  • Comprobante de Domicilio (Teléfono fijo, Agua, Luz o Gas natural)
+                                  </br>
+                                  
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="col-md-4">
+                      <h6>Mas sobre equivalencia</h6>
+                      <img style="height: 300px" src="img/regular.png">
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+
               <!--Equivalencia-->
               <div class="col">
                 <div class="card border-0 mb-3">
@@ -1335,38 +1401,10 @@
                     <div class="card-body">
                       <h5 class="card-title text-center">¿Qué es la legalización?</h5>
                       <p class="card-text" style="text-align: justify;">
-
-                        El trámite de Legalización de Firmas consiste en certificar las Firmas de los Servidores
-                        Públicos Federales
-                        y Estatales, facultados para hacer constar la validez y legitimidad de los Documentos Públicos
-                        de origen
-                        nacional en el territorio Mexicano, siempre que el trámite se relacione con países que no hayan
-                        adoptado la
-                        Convención por la que se Suprime el Requisito de Legalización de los Documentos Públicos
-                        Extranjeros
-                        (Convención de la Haya).</br></br>
-
-                        Con fundamento en lo establecido por los artículos 27, fracción XXII de la Ley Orgánica de la
-                        Administración
-                        Pública Federal, 12, fracciones XVII y XVIII del Reglamento Interior de la Secretaría de
-                        Gobernación y por el
-                        Acuerdo por el que se establecen los Lineamientos Generales del Procedimiento de Apostilla de
-                        Documentos y
-                        Legalización de Firmas, la Dirección de Coordinación Política con los Poderes de la Unión
-                        adscrita a la Unidad
-                        de Gobierno, es la encargada de realizar el procedimiento de Legalización de Documentos Públicos
-                        emitidos por
-                        Autoridades Federales y Estatales, por Instituciones Educativas Públicas Federales, así como por
-                        Instituciones
-                        Privadas Incorporadas la Secretaría de Educación Pública Federal, entre otras.</br></br>
-
-                        En caso de que el Documento Público que desea legalizar hubiera sido emitido por una Autoridad
-                        Estatal, deberá realizar el trámite de Legalización ante el Gobierno del Estado correspondiente,
-                        una vez realizado este, podrá ser legalizado por esta Dirección.
-
+                        Es el trámite que consiste en autenticar las firmas que contiene el certificado de estudios, este trámite se lleva a cabo en oficinas de gobierno del estado donde se emitió el documento.
                       </p>
 
-                      <h5 class="card-title text-center">¿QUÉ DOCUMENTOS REQUIEREN DE LEGALIZACIÓN?</h5>
+                      <h5 class="card-title text-center">¿Qué documentos requieren de legalización?</h5>
 
 
                       <p class="card-text">
@@ -1388,7 +1426,7 @@
                         </li>
                       </ul>
                       </p>
-                      <h5 class="card-title text-center">¿QUÉ INSTITUCIONES NO REQUIEREN DE LEGALIZACIÓN? </h5>
+                      <h5 class="card-title text-center">¿Qué instituciones no requieren de legalización? </h5>
                       <p class="card-text">
                         Los documentos que NO cuenten con alguno de estos requerimientos:</br>
                       <ul>
