--- a/src/views/recoleccion.hbs
+++ b/src/views/recoleccion.hbs
@@ -1063,21 +1063,20 @@
                     <div class="card-body">
                       
                       <h5 class="card-title text-center">
-                      Archivo
+                      Administración de Archivo
                       </h5>
 
                       <p>
 
-                        ● El área de archivo se encarga de: <br/>
-                        ● Recibir los documentos de los alumnos.<br/>
-                        ● Gestionan las guías de entrega de documentos.<br/>
-                        ● Validan documentos físicos que entregan alumnos o paqueterías.<br/>
-                        ● Validan en SIU documentos digitales.<br/>
-                        ● Validan en los expedientes de documentos que el alumno indica haber enviado.<br/>
-                        ● Realizan escaneo de documentos.<br/>
-                        ● Realizan préstamos y devoluciones de documentos.<br/>
-                        ● Capturan datos de documentos de escuela de procedencia en banner.<br/>
-                        ● Reciben documentos de trámite de EQ, Rev y Dictamen técnico.
+                        El equipo de Archivo se encarga de la validación física y la correcta integración, registro, resguardo y control de la documentación que conforma el expediente del estudiante de forma física en Utel.<br/>
+                        <br/>
+
+                        Funciones que realiza:<br/>
+
+                        ● Recepción y Validación de documentos físico en SIU<br/>
+                        ● Escaneo de documentos físicos<br/>
+                        ● Préstamo y devoluciones de documentos físicos<br/>
+                        ● Recepción y envío de documentos a las alianzas ÚNICA, UNAG, UVE
 
                       </p>
 
@@ -1467,12 +1466,17 @@
         <!--Dictaminación-->
         <div class="bloque" id="bloqueArchivo">
 
-          <div class="card border-0 py-3 px-3" >
+          <div class="card border-0 py-3 px-3" > 
 
           <h4><b>¿Qué es la dictaminación?</b></h4>
           
           <p style="text-align: justify;">
-            Es el procedimiento mediante el cual la institución donde estudio el bachillerato subsana datos faltantes en el Certificado de estudios de Bachillerato
+            Proceso institucional para corroborar que los elementos de forma y validez del certificado de estudios del alumno cumplan con los lineamientos establecidos para su registro, integración y resguardo.
+            <br/><br/>
+            Para realizar este proceso es importante que los documentos se encuentren escaneados legibles, que se visualicen las 4 esquinas, completos,  que estén todas las hojas que integran el Certificado de Estudios, siempre por ambos lados. 
+            <br/><br/>
+            Si los documentos digitales no son ilegibles se rechazan y se piden escaneos correctos. Apoyándonos con el área de Recolección 
+
           </P>
 
           <h4 class="text-center"><b>Proceso</b></h4>
