--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -361,3 +361,23 @@ body {
   .tramitenoactivo{
     display: none;
   }
+
+  .imagen-ampliada {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 9999;
+  }
+
+  .imagen-ampliada img {
+    display: block;
+    margin: auto;
+    width: 100%;
+    height: 100%;
+    max-width: none;
+    max-height: none;
+  }
