--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -56,7 +56,7 @@
             <div class="card-body">
               <h5 class="card-title">Equivalencia Ecuador</h5>
               <p class="card-text" style="text-align: justify;">
-                SENESYT solicita carta CINE UNESCO, para trámite de Equivalencia academica. Los egresados que hayan realizado el pago del certificado de programa académico (CPA) quedan exentos del pago de la carta CINE UNESCO, esto aplica para las matrículas a las que aún se les solicitó el pago del CPA, con anterioridad.
+                SENESCYT solicita carta CINE UNESCO para trámite de Equivalencia académica. Los egresados que hayan realizado el pago del Certificado de Programa Académico (CPA) quedan exentos del pago de esta carta. Esto aplica para los alumnos y egresados que hayan realizado los pagos con anterioridad.
               </p>
             </div>
           </div>
@@ -94,7 +94,7 @@
             <div class="card-body">
               <h5 class="card-title">Evento de entrega de documentos</h5>
               <p class="card-text" style="text-align: justify;">
-                El pasado 11 de noviembre se llevó a cabo la entrega de documentos en UTEL. Siendo un éxito con asistencia del 83%.
+                El pasado 11 de noviembre se llevó a cabo la entrega de documentos en UTEL. Siendo un éxito con asistencia del 83% de los egresados que fueron convocados.
               </p>  
             </div>
           </div>
