--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -30,6 +30,7 @@
     <script defer src="/js/funciones_r.js "></script>
     <script defer src="/js/buscador.js"></script>
     <script defer src="/js/menu_tramites.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
