--- a/src/views/recoleccion.hbs
+++ b/src/views/recoleccion.hbs
@@ -250,7 +250,7 @@
           <div class="border border-0 card mt-1">
 
             <h4><b>Archivo</b></h4>
-
+            
             <p style="text-align: justify;">
              El equipo de Archivo se encarga de la validación física y la correcta integración, registro, resguardo y control de la documentación que conforma el expediente del estudiante de forma física en Utel.
             <br/><br/>
@@ -261,18 +261,23 @@
               ● Recepción y envío de documentos a las alianzas ÚNICA, UNAG, UVE
             </P>
             
-            <h5><b>Proceso de devolución:</b></h5>
+            <div class="row row-cols-1 row-cols-md-2 g-4">
 
-            <p style="text-align: justify;">
-            El procedimiento de devolución comienza cuando un estudiante solicita la recuperación de los documentos que previamente entregó a UTEL. 
-            <br/><br/>
-            Para asegurar una gestión eficaz, se verifica en el Sistema Integral Universitario (SIU) la validación de los documentos solicitados.<br/>
+              <div class="col">
+                <h5><b>Proceso de prestamo</b></h5>
+                  <p style="text-align: justify;">
+                  <img src="img/recoleccion/infoprestamo.png" class="img-fluid">
+                  </P>
+              </div>
+              <div class="col">
+                <h5><b>Proceso de devolución:</b></h5>
+                <img src="img/recoleccion/infodevolucion.png" class="img-fluid">
+              </div>
+            </div>
+
             
-            ● Se requiere que los documentos tengan un estado definido (baja definitiva o egresado). Una vez confirmada esta información,<br/>
-            ● El asesor brinda detalles sobre el proceso de devolución de documentos.<br/>
-            ● El estudiante puede elegir entre enviar una guía para la recolección en su domicilio, si así lo prefiere, o acudir personalmente.<br/>
-            En ambos casos, el asesor debe registrar la solicitud correspondiente en Flokzu.
-            </P>
+
+            
 
             <h5><b>Opciones de entrega de préstamo de documento físico o devolución de documento físico</b></h5>
 
