--- a/src/views/recoleccion.hbs
+++ b/src/views/recoleccion.hbs
@@ -2,7 +2,7 @@
   <div class="modal-dialog modal-dialog-centered modal-g"> 
     <div class="modal-content">
       <div class="modal-body">
-        <img src="img/recoleccion/guia.PNG" class="img-fluid" alt="Imagen Ampliada">
+        <img src="imgRecoleccion/guia.PNG" class="img-fluid" alt="Imagen Ampliada">
       </div>
     </div>
   </div>
@@ -298,12 +298,8 @@
             <div class="container mt-5">
               <div class="row row-cols-xl-1 row-cols-xl-4 row-cols-md-4">
                 <div class="col">
-                  <img src="img/recoleccion/guia.PNG" class="img-fluid" alt="Imagen" data-bs-toggle="modal" data-bs-target="#imagenModal">
+                  <img src="img/Recoleccion/guia.PNG" class="img-fluid" alt="Imagen" data-bs-toggle="modal" data-bs-target="#imagenModal">
                 </div>
-                <div class="col">
-                  <img src="img/recoleccion/guia.PNG" class="img-fluid" alt="Imagen" data-bs-toggle="modal" data-bs-target="#imagenModal">
-                </div>
-                
               </div>
             </div>
 
