--- a/src/views/recoleccion.hbs
+++ b/src/views/recoleccion.hbs
@@ -2,7 +2,18 @@
   <div class="modal-dialog modal-dialog-centered modal-g"> 
     <div class="modal-content">
       <div class="modal-body">
-        <img src="imgRecoleccion/guia.PNG" class="img-fluid" alt="Imagen Ampliada">
+        <img src="img/Recoleccion/guia.PNG" class="img-fluid" alt="Imagen Ampliada">
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade imagen-ampliada" id="imagenModal3" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-lg"> 
+    <div class="modal-content">
+      <div class="modal-body">
+        <img src="img/Recoleccion/cartapoder1.PNG" class="img-fluid" alt="Imagen Ampliada">
+        <a href="docs/Recoleccion/CARTA PODER REV.docx" download="" class="Botonmanual row py-2 mx-5 text-center justify-content-center">Descargar formato</a>
       </div>
     </div>
   </div>
@@ -64,78 +75,133 @@
             ● El alumno debe entregar documentos digitales, excepto para ingresos por equivalencia o revalidación, que necesitan documentos físicos originales.
             <br/>
             ● Solo se aceptarán escaneos en formato PDF del documento original, que estén legibles, en buen estado, y muestren ambos lados (aún cuando esté en blanco en el reverso) con los 4 bordes completos. No se admitirán fotografías en formato PDF ni capturas de aplicaciones de celular o fotos de fotos.
-
             </P>
 
-            
             <div class="row row-cols-1 row-cols-md-2 g-4">
               <div class="col">
-                <h5>Documentos Digitales para Licenciatura:</h5>
-                <p style="text-align: justify;">
-                ● Acta de nacimiento
-                <br/>
-                ● Certificado de bachillerato (En todos los certificados dice  “certificado o certifica”)
-                </P>
+                <div class="card h-100">
+                  <div class="card-header">
+                    Documentos Digitales para Licenciatura:
+                  </div>
+                  <div class="card-body">                   
+                    <p>
+                    ● Acta de nacimiento
+                    <br/>
+                    ● Certificado de bachillerato (En todos los certificados dice  “certificado o certifica”)
+                    </P>
+                  </div>
+                </div>
               </div>
               <div class="col">
-                <h5>Documentos Digitales para Maestría:</h5>
+                <div class="card h-100">
+                  <div class="card-header">
+                    Documentos Digitales para Maestría:
+                  </div>
+                  <div class="card-body">
+                    <p>
+                    ● Acta de nacimiento
+                    <br/>
+                    ● Certificado de licenciatura (En todos los certificados dice  “certificado o certifica”)
+                    <br/>
+                    ● Título de licenciatura (Se aceptan copias 100% legibles)
+                    </P>
+                  </div>
+                </div>
+              </div>
 
-                <p style="text-align: justify;">
-                ● Acta de nacimiento
-                <br/>
-                ● Certificado de licenciatura (En todos los certificados dice  “certificado o certifica”)
-                <br/>
-                ● Título de licenciatura (Se aceptan copias 100% legibles)
-                </P>
+              <div class="col">
+                <div class="card h-100">
+                  <div class="card-header">
+                    Documentos Digitales para Doctorado:
+                  </div>
+                  <div class="card-body">
+                    <p>
+                    ● Acta de nacimiento
+                    <br/>
+                    ● Certificado de Maestría (En todos los certificados dice  “certificado o certifica”)
+                    <br/>
+                    ● Título de grado (Se aceptan copias 100% legibles)
+                    </P>
+                  </div>
+                </div>
               </div>
               <div class="col">
-                <h5>Documentos Digitales para Doctorado:</h5>
 
-                <p style="text-align: justify;">
-                ● Acta de nacimiento
-                <br/>
-                ● Certificado de Maestría (En todos los certificados dice  “certificado o certifica”)
-                <br/>
-                ● Título de grado (Se aceptan copias 100% legibles)
-                </P>
-              </div>
-              <div class="col">
-                <h5>Para Utel LATAM:</h5>
-
-                <p style="text-align: justify;">
-                Documentos Digitales para Dictamen Técnico (los documentos deben estar notariados):
-                <br/>
-                ● Acta de nacimiento/partida de nacimiento (No es obligatoria)
-                <br/>
-                ● Certificado/diploma/título de bachiller o documento equivalente. 
-                <br/>
-                ● Identificación oficial o DNI
-                </P>
+                <div class="card h-100">
+                  <div class="card-header">
+                    Para Utel LATAM:
+                  </div>
+                  <div class="card-body">
+                    <p>
+                    Documentos Digitales para Dictamen Técnico (los documentos deben estar notariados):
+                    <br/>
+                    ● Acta de nacimiento/partida de nacimiento (No es obligatoria)
+                    <br/>
+                    ● Certificado/diploma/título de bachiller o documento equivalente. 
+                    <br/>
+                    ● Identificación oficial o DNI
+                    </P>
+                  </div>
+                </div>
               </div>
             </div>
 
+            <br/><br/>
             <h5>¿Que es el tipo de Ingreso?</h5>
             <p>Se asigna según la situación escolar y antecedentes académicos de cada alumno, incluyen: regular, equivalencia de materias, revalidación de estudios o dictamen técnico.</p>
+            
             <div class="row row-cols-1 row-cols-md-2 g-4">
-              
               <div class="col">
-                <b>Regular:</b> <br/>
-                Proceso estándar mediante el cual los estudiantes solicitan y son admitidos en programas académicos regulares que no piensan hacer equivalencia de materias o revalidación. Esto implica seguir los procedimientos y requisitos establecidos por la universidad. 
+                <div class="card h-100">
+                  <div class="card-header">
+                    Regular:
+                  </div>
+                  <div class="card-body">                   
+                    <p>
+                    Proceso estándar mediante el cual los estudiantes solicitan y son admitidos en programas académicos regulares que no piensan hacer equivalencia de materias o revalidación. Esto implica seguir los procedimientos y requisitos establecidos por la universidad.
+                    </P>
+                  </div>
+                </div>
               </div>
               <div class="col">
-                <b>Equivalencia de materias:</b><br/>
-                Trámite mediante el cual la Autoridad Educativa o la Institución declara equiparables entre sí estudios realizados dentro del Sistema Educativo Nacional.
+                <div class="card h-100">
+                  <div class="card-header">
+                    Equivalencia de materias:
+                  </div>
+                  <div class="card-body">
+                    <p>
+                    Trámite mediante el cual la Autoridad Educativa o la Institución declara equiparables entre sí estudios realizados dentro del Sistema Educativo Nacional.
+                    </P>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col">
+                <div class="card h-100">
+                  <div class="card-header">
+                    Revalidación de estudios:
+                  </div>
+                  <div class="card-body">
+                    <p>
+                    Trámite mediante el cual la autoridad educativa otorga validez oficial a estudios realizados en el extranjero, siempre y cuando sean equiparables con estudios que se impartan en el Sistema Educativo Nacional.
+                    </P>
+                  </div>
+                </div>
               </div>
               <div class="col">
-                <b>Revalidación de estudios:</b><br/>
-                Trámite mediante el cual la autoridad educativa otorga validez oficial a estudios realizados en el extranjero, siempre y cuando sean equiparables con estudios que se impartan en el Sistema Educativo Nacional.
-              </div>
-              <div class="col">
-                <b>Dictamen técnico:</b><br/>
-                Finalidad de reconocer estudios de Educación Media Superior y Superior realizados en el extranjero, únicamente con fines académicos para facilitar el ingreso de alumnos a escuelas mexicanas que imparten planes de estudios con reconocimiento de validez oficial.
+
+                <div class="card h-100">
+                  <div class="card-header">
+                    Dictamen técnico:
+                  </div>
+                  <div class="card-body">
+                    <p>
+                    Finalidad de reconocer estudios de Educación Media Superior y Superior realizados en el extranjero, únicamente con fines académicos para facilitar el ingreso de alumnos a escuelas mexicanas que imparten planes de estudios con reconocimiento de validez oficial.
+                    </P>
+                  </div>
+                </div>
               </div>
             </div>
-            
             
             <br/>
             <h5><b>¿Qué es la legalización?</b></h5>
@@ -155,16 +221,14 @@
                 <div id="flush-collapsereva" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
                   <div class="accordion-body">
                       <p style="text-align: justify;">
-                      <b></b><br/>
-                      Acta de nacimiento/partida de nacimiento original <br/>
-                      Certificado/diploma/título de bachiller o equivalente.<br/>
-                      Antecedentes de Secundaria (Boletas de calificaciones, boleta de notas o sabana de materia, tipo historial académico, estos últimas no son oficiales)<br/>
-                      Carta poder (Solo aplica para maestría)<br/>
-
+                      ● Acta de nacimiento/partida de nacimiento original <br/>
+                      ● Certificado/diploma/título de bachiller o equivalente.<br/>
+                      ● Antecedentes de Secundaria (Boletas de calificaciones, boleta de notas o sabana de materia, tipo historial académico, estos últimas no son oficiales)<br/>
+                      ● Carta poder (Solo aplica para maestría)<br/>
                       <div class="container mt-5">
                         <div class="row row-cols-xl-1 row-cols-xl-4 row-cols-md-4">
                           <div class="col">
-                            <img src="img/Recoleccion/cartapoder2.PNG" class="img-fluid" alt="Imagen" data-bs-toggle="modal" data-bs-target="#imagenModal2">
+                            <img src="img/Recoleccion/cartapoder1.PNG" class="img-fluid" alt="Imagen" data-bs-toggle="modal" data-bs-target="#imagenModal3">
                           </div>                
                         </div>
                       </div>
@@ -179,15 +243,13 @@
                     Documentos digitales y físicos para equivalencia de materias:
                   </button>
                 </h2>
-                <div id="flush-collapseTeq" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                <div id="flush-collapseeq" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
                   <div class="accordion-body">
                     <p style="text-align: justify;">
-                      <b></b><br/>
-                      Acta de nacimiento/partida de nacimiento original <br/>
-                      Certificado/diploma/título de bachiller o equivalente.<br/>
-                      Antecedentes de Secundaria (Boletas de calificaciones, boleta de notas o sabana de materia, tipo historial académico, estos últimas no son oficiales)<br/>
-                      Carta poder (Solo aplica para maestría)<br/>
-
+                      ● Acta de nacimiento/partida de nacimiento original <br/>
+                      ● Certificado/diploma/título de bachiller o equivalente.<br/>
+                      ● Antecedentes de Secundaria (Boletas de calificaciones, boleta de notas o sabana de materia, tipo historial académico, estos últimas no son oficiales)<br/>
+                      ● Carta poder (Solo aplica para maestría)<br/>
                       <div class="container mt-5">
                         <div class="row row-cols-xl-1 row-cols-xl-4 row-cols-md-4">
                           <div class="col">
@@ -206,7 +268,7 @@
               <div class="accordion-item">
                 <h2 class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                    Asistirás de forma presencial
+                    Asistirá de forma presencial
                   </button>
                 </h2>
                 <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
@@ -218,7 +280,7 @@
               <div class="accordion-item">
                 <h2 class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                    Requieres enviarlo a las oficinas UTEL.
+                    Requiere enviarlo a las oficinas UTEL.
                   </button>
                 </h2>
                 <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
