--- a/src/views/partials/footer.hbs
+++ b/src/views/partials/footer.hbs
@@ -11,9 +11,7 @@
           <h5 class="text-white">Misión Utel</h5>
 
           <p>
-              Nuestra misión es proporcionar oportunidades de aprendizaje innovador y de alta calidad que conduzca a la obtención de un
-               grado o posgrado mediante el uso eficiente de los recursos tecnológicos, dentro de un modelo educativo inclusivo y 
-               humanista.
+            Contribuir al logro del desarrollo profesional de las personas a través de procesos de enseñanza-aprendizaje innovadores, basados en el uso eficiente de recursos tecnológicos, en el marco de un modelo educativo flexible, incluyente y comprometido con la calidad.
           </p>
         </div>
 
