--- a/src/views/latam.hbs
+++ b/src/views/latam.hbs
@@ -554,7 +554,7 @@
           <h4><b>CINE UNESCO</b></h4></br>
           
           <a style="text-align: justify;">
-            Documento Institucional que se emite a los egresados de Ecuador interesados en realizar su Equivalencia academica. 
+            Documento Institucional que se emite a los egresados de Ecuador interesados en realizar su Equivalencia académica. 
             Hace constar la Modalidad de estudios y los Campos CINE-UNESCO. Deben haber acreditado el 100% de créditos del plan de estudios 
             de licenciatura, maestría o doctorado. <br/><br/>
             El costo es de: $15.00 USD<br/><br/>
@@ -605,7 +605,7 @@
               tu Título o Grado académico avalado por la SEP apostillado en México y solicites el trámite que
               consiste en:</br></br>  
 
-              <h6>1. Llenar la Solicitud de Equivalencia academica de Título de Utel en USA.</h6></br></br>    
+              <h6>1. Llenar la Solicitud de Equivalencia académica de Título de Utel en USA.</h6></br></br>    
               <h6>2. Pagar el costo correspondiente al trámite, que incluye:</h6></br></br>    
                 ● Envío de documentos a USA</br> 
                 ● Traducción oficial del Título de Utel (en USA)</br> 
@@ -659,10 +659,10 @@
       <!--CPA--> 
       <div class="bloque" id="bloqueCpa">
         <div class="card border-0 py-3 px-3" >
-            <h4><b>Certificado de programa académico para proceso de Equivalencia academica LATAM</b></h4></br>
+            <h4><b>Certificado de programa académico para proceso de Equivalencia académica LATAM</b></h4></br>
             
             <a style="text-align: justify;">
-                Documento Institucional que se emite para nuestros egresados extranjeros interesado en realizar el trámite de Equivalencia academica en su país de origen, 
+                Documento Institucional que se emite para nuestros egresados extranjeros interesado en realizar el trámite de Equivalencia académica en su país de origen, 
                 que hayan acreditado el 100% de los créditos del plan de estudios de Licenciatura o Maestría y cuenten con su título y 
                 certificado de estudios Utel. <br/><br/>
 
