--- a/src/views/recoleccion.hbs
+++ b/src/views/recoleccion.hbs
@@ -46,7 +46,7 @@
             <li class="li">Dictaminación</li>
           </div>
           <div class="col">
-            <li class="li">Correspondecia escolar</li>
+            <li class="li">Correspondencia escolar</li>
           </div>
           <div class="col">
             <li class="li">Alianzas</li>
