--- a/src/views/directorio.hbs
+++ b/src/views/directorio.hbs
@@ -628,7 +628,7 @@
                 <div class="col card border-0">
                   <div class="card-body">
                     <h5 class="card-title">Control escolar</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Miriam Selene Campusano Maya</h6>
+                    <h6 class="card-subtitle mb-2 text-muted">Miriam Selene Campuzano Maya</h6>
                     <p class="card-text">
                       Cargo: </br>Coordinadora Control Escolar</br>
                       Correo: </br>miriam.campuzano@s4learning.com</br>
